crates/nash-codegen/src/tests/snapshots/nash_codegen__tests__integration__rejected_generator_skips_body_and_selected_target_is_enforced_1_V1_Silent.snap
---
source: crates/nash-codegen/src/tests/integration.rs
description: "module Main exposing (..)\nimport Primitive exposing (..)\nimport Builtin exposing (..)\nimport Prop exposing (reject)\ntests\n    test \"plain\" = do\n        assert True\n    prop \"invalid\" =\n        let x via reject in\n        do\n            assert (Builtin.equalsInteger x x)\n"
---
--- plain
(program 1.1.0
  [(lam i0
    [(lam i1
      [(lam i2
        [(lam i3 (case [i1 (con bool True)] [[i3 i0] (lam i4 (error))] (con unit ())))
          (lam i3 (lam i4 [[[(force (builtin trace)) i3] i4] [i2 (con unit ())]]))])
        (lam i2 i2)])
      (lam i1 i1)])
    (con string "\0assert\0\48")])
